# geoip2-tools

./: .bumpversion.cfg  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  requirements.in  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
geoip2_tools/: __init__.py  database.py  exceptions.py  lock.py  management.py  manager.py  utils.py
geoip2_tools/tests/: __init__.py  test_geoip2_tools.py
scripts/: geoip2-tools
