[metadata]
name = geoip2-tools
version = attr: geoip2_tools.__version__
author = Nekmo
author-email = contacto@nekmo.com
url = https://github.com/Nekmo/geoip2-tools/
download_url = https://github.com/Nekmo/geoip2-tools/archive/master.zip
description = Automatic updates and administration of MaxMind GeoIP2 databases.
long-description = file: README.rst
license = MIT
license-file = LICENSE
platform = any
keywords = geoip2-tools

[options]
zip_safe = False
include_package_data = True
packages = find:

[bdist_wheel]
universal = 1

[sdist]
formats = zip, gztar

[check]
metadata = True
restructuredtext = True
strict = True

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:geoip2_tools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'


[flake8]
exclude = docs

[aliases]

# Define setup.py command aliases here
